[tool.poetry]
name = "epson-projector-mqtt"
version = "0.1.0"
description = ""
authors = ["Henryk Plötz <henryk@ploetzli.ch>"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
asyncio-mqtt = "^0.11.1"
epson-projector = "^0.4.2"
everett = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
epson_projector_mqtt = "epson_projector_mqtt:main"
